--- a/src/main/webapp/static/main.css
+++ b/src/main/webapp/static/main.css
@@ -1,3 +1,14 @@
+td {
+    border: 3px solid black;
+    padding: 10px;
+    border-collapse: separate;
+    margin: 12px;
+    width: 125px;
+    height: 125px;
+    font-size: 60px;
+    text-align: center;
+    empty-cells: show;
+}
 h1 {
     color: #00e5ff;
 }
